--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
                 margin-right: auto;
                 padding-left: 60px;
             }
+
+            .resizable-image {
+                max-width: 100%;
+                max-height: 100%;
+                display: block;
+                margin: auto;
+            }
+    </style>
         </style>
     </head>
     <body>
         <div>
-            <img id="themes" src="images/themes.png" alt="themes" class="center">
+            <img id="themes" src="images/themes.png" alt="themes" class=resizable-image>
         </div>
     </body>
 
