--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
                 padding-left: 60px;
             }
 
-            .resizable-image {
-                max-width: 100%;
-                max-height: 100%;
-                display: block;
-                margin: auto;
-            }
+            
     </style>
         </style>
     </head>
     <body>
         <div>
-            <img id="themes" src="images/themes.png" alt="themes" class=resizable-image>
+            <img id="themes" src="images/themes.png" alt="themes" width=99%>
         </div>
     </body>
 
