--- a/index.html
+++ b/index.html
@@ -10,15 +10,44 @@
                 margin-right: auto;
                 padding-left: 60px;
             }
-
-            
-    </style>
         </style>
     </head>
     <body>
-        <div>
-            <img id="themes" src="images/themes.png" alt="themes" width=99%>
-        </div>
+        <section>
+            <div style="width: 100%; height: 100%;">
+                <div style="width: 27%;float:left;">
+                    <img id="wrm" src="images/wrm.png" alt="wrm">
+                    <h2>
+                        Focus Areas
+                    </h2>
+                    <h3 style="padding-left: 15%; padding-top: 1%; padding-bottom: 2%;">
+                        <p>Communication</p>
+                        <p>Decision-making</p>
+                        <p>Systems thinking</p>
+                        <p>Data Science</p>
+                        <p>Tool development & Tech Transfer</p>
+                    </h3>
+                </div>
+                <div style="width: 72%; float:right; align-content: center;text-align: center;">
+                    <h1>
+                        Wildfire Risk Management Science
+                    </h1> 
+                    <h1>
+                        (WRMS)
+                    </h1> 
+                    <img id="wraf" src="images/WRAF.png"  
+                </div>
+            </div>
+        </section>
+
+        <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
+            <a href="./about.html" style="padding: 7%;">About</a>
+            <a href="./team.html" style="padding: 7%;">The Team</a>
+            <a href="./projects.html" style="padding: 7%;">Projects</a>
+            <a href="./resources.html" style="padding: 7%;">Resources</a>
+        </nav>
+
+
     </body>
 
 </html>
