--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,52 @@
         </style>
     </head>
     <body>
-        <section>
+        <section style="width: 100%;align-content: center;">
+            <h1>
+                Current Projects
+            </h1>
+            <article style="width: 100%;align-content: center;padding: 5%;">
+                <img src="images/animatedRMRS.gif" style="width: 25%;float: left;">
+                <p style="width: 72%;float: right;font-size: medium;">
+                    Raster Tools is a python package that facilitates a wide range of spatial, statistical, machine learning analyses using delayed and automated parallel processing. Our library focuses on significantly reducing processing time and storage space associated with analyzing large spatial datasets while also introducing new spatial, statistical, machine learning concepts into an easy-to-use python based API.
+                </p>
+                <a href="https://github.com/UM-RMRS/raster_tools" style="width: 25%;float:left;font-size:medium;">
+                    Raster Tools (GitHub)
+                </a>
+            </article>
+            <article style="width: 100%;align-content: center;padding: 5%;">
+                <img src="images/ssmart.png" style="width: 22%;float: left;">
+                <p style="width: 72%;float: right;font-size: medium;">
+                    SSMART Forestry is committed to advancing sustainable forestry practices and pioneering innovative solutions 
+                    for the industry. We harness the power of smart technology and science-based approaches to enhance the resilience of Oregon's 
+                    forests and the well-being of forest-dependent rural communities. 
+                </p>
+                <a href="https://github.com/UM-RMRS/raster_tools" style="width: 25%;float:left;font-size:medium;">
+                    SSMART Forestry Project
+                </a>
+            </article>
+            <article style="width: 100%;align-content: center;padding: 5%;">
+                <img src="images/DeliveredCost.png" style="width: 22%;float: left;">
+                <p style="width: 72%;float: right;font-size: medium;">
+                    This project highlights using Jupyter notebooks to perform 21 century fuels 
+                    planning that incorporate the PODs concept into forest management planning.
+                    As part of the project we demonstrate how Raster Tools and ancillary data 
+                    can be used to identify and quantify treatment locations and cost of 
+                    implementation to reduce fire risk and create fire resilient landscapes. 
+                    Project Jupyter notebooks can be used as templates for other  
+                </p>
+                <a href="https://github.com/jshogland/SpatialModelingTutorials/blob/main/Notebooks/PODs_Integration.ipynb" style="width: 25%;float:left;font-size:medium;">
+                    Fire Resilient Landscapes 
+                </a>
+            </article>
             
+            
+        </section>
+        <section style="width: 100%;align-content: center
+        ;">
+            <h1>
+                Past Projects
+            </h1>
         </section>
 
         <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
