--- a/team.html
+++ b/team.html
@@ -13,9 +13,25 @@
         </style>
     </head>
     <body>
-        <section>
+        <h1 style="align-content: center;text-align: center;">
+            Meet the Team
+        </h1>
+        <article style="padding: 1%;">
+            <img src="images/Hogland.png" style="float: left;width: 25%;">
+            <p style="float: right;width: 70%;color: black; font-size: small;">
+                Dr. Hogland is a Research Forester working for the Rocky Mountain Research Station. 
+                His research interests revolve around quantitative methods within geographic information systems (GIS) and understanding the relationships between 
+                landscape patterns and forested ecosystems processes. Current projects include: 1) quantifying forest characteristics at fine spatial scales, 2) 
+                designing, developing, and building new procedures that integrate machine learning and statistical modeling with fast raster processing (Function Modeling) 
+                to streamline spatial modeling and reduce storage space associated wit
+                h GIS analyses, and 3) developing sampling strategies focused on reducing the cost of 
+                sampling while maintaining the characteristics of a representative sample. 
+            </p>
+            <a href="https://sites.google.com/view/hoglandsspatialsolutions/home" style="width: 100%;float:left;">
+                Personal Website
+            </a>
             
-        </section>
+        </article>
 
         <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
             <a href="./about.html" style="padding: 7%;">About</a>
