--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,23 @@
                     As part of the project we demonstrate how Raster Tools and ancillary data 
                     can be used to identify and quantify treatment locations and cost of 
                     implementation to reduce fire risk and create fire resilient landscapes. 
-                    Project Jupyter notebooks can be used as templates for other  
+                    Project Jupyter notebooks can be used as templates for other landscapes. 
                 </p>
                 <a href="https://github.com/jshogland/SpatialModelingTutorials/blob/main/Notebooks/PODs_Integration.ipynb" style="width: 25%;float:left;font-size:medium;">
                     Fire Resilient Landscapes 
+                </a>
+            </article>
+            <article style="width: 100%;align-content: center;padding: 5%;">
+                <img src="images/AlexDashboard_.jpeg" style="width: 22%;float: left;">
+                <p style="width: 72%;float: right;font-size: medium;">
+                    Wildland fire response is resource-intensive, high-risk, and increasingly complex. To improve outcomes, 
+                    we need a better understanding of what has worked — and why. The Human Dimensions 
+                    WRMS team work helps meet this need by analyzing where firelines successfully held, burned over, 
+                    or were not engaged across hundreds of large wildfires. This evidence-based approach provides the 
+                    Forest Service with actionable insights to improve strategic planning, firefighter safety, and real-time decision-making.  
+                </p>
+                <a href="./fle_aarkowitz.html" style="width: 25%;float:left;font-size:medium;">
+                    Fireline Effectiveness Analysis 
                 </a>
             </article>
             
