--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
             Meet the Team
         </h1>
         <article style="padding: 1%;">
-            <img src="images/Hogland.png" style="float: left;width: 25%;">
+            <img src="images/Hogland.png" style="float: left;width: 25%;padding: 2%;">
             <p style="float: right;width: 70%;color: black; font-size: small;">
                 Dr. Hogland is a Research Forester working for the Rocky Mountain Research Station. 
                 His research interests revolve around quantitative methods within geographic information systems (GIS) and understanding the relationships between 
@@ -33,9 +33,14 @@
             
         </article>
         <article style="padding: 1%;">
-            <img src="images/Arkowitz.png" style="float: left;width: 25%;">
+            <img src="images/Arkowitz.jpg" style="float: left;width: 25%;padding: 2%;">
             <p style="float: right;width: 70%;color: black; font-size: small;">
-                Alex Arkowitz is a ....
+                Alexander P. Arkowitz is a Geospatial Wildfire Analytics Research Associate with Colorado State University and a contractor for the 
+                US Forest Service – Rocky Mountain Research Station. He leads research on wildfire containment and suppression effectiveness, developing 
+                spatial models to evaluate fireline engagement, fuel treatment performance, and operational strategies. With over a decade of experience 
+                in wildfire science, emergency response, and geospatial analysis, Alex has contributed to national fireline datasets, incident mapping, 
+                and situational awareness tools for agencies including the USFS, BLM, and NOAA. He holds an M.S. in Applied Geospatial Sciences from 
+                Northern Arizona University and is FAA-certified as a remote pilot.
             </p>
       
             <a href="https://csurams.maps.arcgis.com/apps/dashboards/4ba7dbbc420b401192b880c32ce7be6f" style="width: 100%;float:left;">
