--- a/index.html
+++ b/index.html
@@ -2,50 +2,37 @@
 <html lang="en">
     <head>
         <title> Wildfire Risk Management Science (WRMS)</title>
-        <style>
-            
-            .center {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                padding-left: 60px;
-            }
-        </style>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <section>
-            <div style="width: 100%; height: 100%;">
-                <div style="width: 27%;float:left;">
-                    <img id="wrm" src="images/wrm.png" alt="wrm">
-                    <h2>
-                        Focus Areas
-                    </h2>
-                    <h3 style="padding-left: 15%; padding-top: 1%; padding-bottom: 2%;">
-                        <p>Communication</p>
-                        <p>Decision-making</p>
-                        <p>Systems thinking</p>
-                        <p>Data Science</p>
-                        <p>Tool development & Tech Transfer</p>
-                    </h3>
-                </div>
-                <div style="width: 72%; float:right; align-content: center;text-align: center;">
-                    <h1>
-                        Wildfire Risk Management Science
-                    </h1> 
-                    <h1>
-                        (WRMS)
-                    </h1> 
-                    <img id="wraf" src="images/WRAF.png"  
-                </div>
+        <div class="flex-row">
+            <img id="wrm" src="images/wrm.png" alt="wrm" style="width: 20vw;">
+            <h1>
+                Wildfire Risk Management Science (WRMS)
+            </h1>
+        </div>
+        <div class="flex-row">
+            <div>
+                <h2>
+                    Focus Areas
+                </h2>
+                <h3 style="padding-left: 5vw;">
+                    <p>Communication</p>
+                    <p>Decision-making</p>
+                    <p>Systems thinking</p>
+                    <p>Data Science</p>
+                    <p>Tool development & <br>Tech Transfer</p>
+                </h3>
             </div>
-        </section>
-
-        <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
+            <img id="wraf" src="images/WRAF.png">
+        </div>
+        
+        <div class="flex-row" style="font-size: large; font-weight: bold;">
             <a href="./about.html" style="padding: 7%;">About</a>
             <a href="./team.html" style="padding: 7%;">The Team</a>
             <a href="./projects.html" style="padding: 7%;">Projects</a>
             <a href="./resources.html" style="padding: 7%;">Resources</a>
-        </nav>
+        </div>
 
 
     </body>
