--- a/about.html
+++ b/about.html
@@ -2,15 +2,7 @@
 <html lang="en">
     <head>
         <title> About </title>
-        <style>
-            
-            .center {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                padding-left: 60px;
-            }
-        </style>
+        <link rel="stylesheet" href="main.css"
     </head>
     <body>
         <section>
@@ -29,12 +21,12 @@
             
         </section>
 
-        <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
+        <div class="flex-row" style="font-size: large; font-weight: bold;">
             <a href="./index.html" style="padding: 7%;">WRMS</a>
             <a href="./team.html" style="padding: 7%;">The Team</a>
             <a href="./projects.html" style="padding: 7%;">Projects</a>
             <a href="./resources.html" style="padding: 7%;">Resources</a>
-        </nav>
+        </div>
 
 
     </body>
