--- a/resources.html
+++ b/resources.html
@@ -2,27 +2,19 @@
 <html lang="en">
     <head>
         <title> Resources </title>
-        <style>
-            
-            .center {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                padding-left: 60px;
-            }
-        </style>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <section>
             
         </section>
 
-        <nav style="float: bottom; padding:5%; width: 100%; align-content: center; font-size: large; font-weight: bold;">
+        <div class="flex-row" style="font-size: large; font-weight: bold;">
             <a href="./about.html" style="padding: 7%;">About</a>
             <a href="./team.html" style="padding: 7%;">The Team</a>
             <a href="./projects.html" style="padding: 7%;">Projects</a>
             <a href="./index.html" style="padding: 7%;">WRMS</a>
-        </nav>
+        </div>
 
 
     </body>
