--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
             <article class="flex-row" style="padding: 1vw;">
                 <img src="images/animatedRMRS.gif" style="width: 25vw;padding:2vw">
                 <p style="width: 72vw;font-size:2vw;">
-                    <a href="https://github.com/UM-RMRS/raster_tools" class="flex-row", style="font-size: large;">
+                    <a href="https://github.com/UM-RMRS/raster_tools" class="flex-row", style="font-size: 2vw;">
                         Raster Tools (GitHub)
                     </a>
                     <br>
@@ -25,7 +25,7 @@
             <article class="flex-row" style="padding: 1vw;">
                 <img src="images/ssmart.png" style="width: 25vw;padding:2vw">
                 <p class="" style="width: 72%;float: right;font-size: 2vw;">
-                    <a href="https://www.ssmartforestry.org/" class="flex-row", style="font-size: large;">
+                    <a href="https://www.ssmartforestry.org/" class="flex-row", style="font-size: 2vw;">
                         SSMART Forestry Project
                     </a>
                     <br>
@@ -38,9 +38,9 @@
             </article>
             
             <article class="flex-row" style="padding: 1vw;">
-                <img src="images/DeliveredCost.png" style="width: 22%;float: left;">
+                <img src="images/DeliveredCost.png" style="width: 22%;">
                 <p style="width: 72%;float: right;font-size: 2vw;">
-                    <a href="https://github.com/jshogland/SpatialModelingTutorials/blob/main/Notebooks/PODs_Integration.ipynb" class="flex-row", style="font-size: large;">
+                    <a href="https://github.com/jshogland/SpatialModelingTutorials/blob/main/Notebooks/PODs_Integration.ipynb" class="flex-row", style="font-size: 2vw;">
                         Fire Resilient Landscapes 
                     </a>
                     <br>
@@ -56,7 +56,7 @@
             <article class="flex-row" style="padding: 1vw;">
                 <img src="images/AlexDashboard_.jpeg" style="width: 22%;float: left;">
                 <p style="width: 72%;float: right;font-size: 2vw;">
-                    <a href="./fle_aarkowitz.html" class="flex-row", style="font-size: large;"">
+                    <a href="./fle_aarkowitz.html" class="flex-row", style="font-size: 2vw;"">
                         Fireline Effectiveness Analysis 
                     </a>
                     <br>
