--- a/about.html
+++ b/about.html
@@ -5,27 +5,27 @@
         <link rel="stylesheet" href="main.css"
     </head>
     <body>
-        <section>
-            
-            <p style="font-size: xx-large;font-weight: bold;text-align: center;width: 100%;">
-                Wildfire Risk Management Science (WRMS)
-            </p>
-            <img src="images/risk_trangle.png" style="width: 50%;padding-left: 25%;"">
-            <p style="font-size:x-large;font-weight: bold;">
-                About the Team
-            </p>
-            <p style="font-size:x-large;font-style:italic;">
-                The Wildfire Risk Management Science (WRMS) Team serves a critical role in the National Fire Decision Support Center, providing key links between fire science development and its application in wildland fire planning, mitigation, incident response, and post-fire recovery. 
-                The team consists of scientists and field practitioners spanning management and operational research, computer science, ecology, econometrics, and incident management experience to critically explore the wildfire response system and provide decision-making support to land managers and incident responders.
-            </p>
-            
-        </section>
+        <h1 class="flex-row" style="font-size: 4vw;font-weight: bold;text-align: center;">
+            Wildfire Risk Management Science (WRMS)
+        </h1>
+        <div class="flex-row">
+            <img src="images/risk_trangle.png" style="width: 25vw;padding: 5vw;">
+            <div>
+                <h3 style="font-size:3vw;font-weight: bold;">
+                    About the Team
+                </h3>
+                <p style="font-size:2vw;font-style:italic;">
+                    The Wildfire Risk Management Science (WRMS) Team serves a critical role in the National Fire Decision Support Center, providing key links between fire science development and its application in wildland fire planning, mitigation, incident response, and post-fire recovery. 
+                    The team consists of scientists and field practitioners spanning management and operational research, computer science, ecology, econometrics, and incident management experience to critically explore the wildfire response system and provide decision-making support to land managers and incident responders.
+                </p>
+            </div>
+        </div>
 
-        <div class="flex-row" style="font-size: large; font-weight: bold;">
-            <a href="./index.html" style="padding: 7%;">WRMS</a>
-            <a href="./team.html" style="padding: 7%;">The Team</a>
-            <a href="./projects.html" style="padding: 7%;">Projects</a>
-            <a href="./resources.html" style="padding: 7%;">Resources</a>
+        <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
+            <a href="./index.html">WRMS</a>
+            <a href="./team.html" >The Team</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./resources.html" >Resources</a>
         </div>
 
 
