--- a/resources.html
+++ b/resources.html
@@ -9,11 +9,11 @@
             
         </section>
 
-        <div class="flex-row" style="font-size: large; font-weight: bold;">
-            <a href="./about.html" style="padding: 7%;">About</a>
-            <a href="./team.html" style="padding: 7%;">The Team</a>
-            <a href="./projects.html" style="padding: 7%;">Projects</a>
-            <a href="./index.html" style="padding: 7%;">WRMS</a>
+        <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
+            <a href="./about.html">About/a>
+            <a href="./team.html" >The Team</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./index.html" >WRMS</a>
         </div>
 
 
