--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <img id="wraf" src="images/WRAF.png">
         </div>
         
-        <div class="flex-row" style="font-size: large; font-weight: bold;">
-            <a href="./about.html" style="padding: 7%;">About</a>
-            <a href="./team.html" style="padding: 7%;">The Team</a>
-            <a href="./projects.html" style="padding: 7%;">Projects</a>
-            <a href="./resources.html" style="padding: 7%;">Resources</a>
+        <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
+            <a href="./about.html">About</a>
+            <a href="./team.html" >The Team</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./resources.html" >Resources</a>
         </div>
 
 
