--- a/projects.html
+++ b/projects.html
@@ -79,11 +79,11 @@
             </h1>
         </section>
 
-        <div class="flex-row" style="font-size: large; font-weight: bold;">
-            <a href="./about.html" style="padding: 7%;">About</a>
-            <a href="./team.html" style="padding: 7%;">The Team</a>
-            <a href="./index.html" style="padding: 7%;">WRMS</a>
-            <a href="./resources.html" style="padding: 7%;">Resources</a>
+        <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
+            <a href="./about.html">About</a>
+            <a href="./team.html" >The Team</a>
+            <a href="./index.html">WRMS</a>
+            <a href="./resources.html" >Resources</a>
         </div>
 
 
