--- a/team.html
+++ b/team.html
@@ -46,11 +46,11 @@
             </div>
         </div>
         
-        <div class="flex-row" style="font-size: large; font-weight: bold;">
-           <a href="./about.html" style="padding: 7%;">About</a>
-            <a href="./index.html" style="padding: 7%;">WRMS</a>
-            <a href="./projects.html" style="padding: 7%;">Projects</a>
-            <a href="./resources.html" style="padding: 7%;">Resources</a>
+        <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
+            <a href="./About.html">About</a>
+            <a href="./team.html" >WRMS</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./resources.html" >Resources</a>
         </div>
 
         
