--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <section style="width: 100%;align-content: center;">
-            <h1>
+            <h1 style="font-size: 3vw;">
                 Current Projects
             </h1>
             <article class="flex-row" style="padding: 1vw;">
@@ -74,7 +74,7 @@
             
         </section>
         <section style="width: 100%;align-content: center;">
-            <h1>
+            <h1 style="font-size: 3vw;">
                 Past Projects
             </h1>
         </section>
