--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <a href="./index.html">WRMS</a>
             <a href="./team.html" >The Team</a>
             <a href="./projects.html">Projects</a>
-            <a href="./resources.html" >Resources</a>
+            <a href="./themes.html" >Themes</a>
         </div>
 
 
