--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
             <a href="./about.html">About</a>
             <a href="./team.html" >The Team</a>
             <a href="./index.html">WRMS</a>
-            <a href="./resources.html" >Resources</a>
+            <a ref="./themes.html" >Themes</a>
         </div>
 
 
