--- a/team.html
+++ b/team.html
@@ -16,8 +16,8 @@
                     His research interests revolve around quantitative methods within geographic information systems (GIS) and understanding the relationships between 
                     landscape patterns and forested ecosystems processes. Current projects include: 1) quantifying forest characteristics at fine spatial scales, 2) 
                     designing, developing, and building new procedures that integrate machine learning and statistical modeling with fast raster processing (Function Modeling) 
-                    to streamline spatial modeling and reduce storage space associated wit
-                    h GIS analyses, and 3) developing sampling strategies focused on reducing the cost of 
+                    to streamline spatial modeling and reduce storage space associated with GIS analyses, and 
+                    3) developing sampling strategies focused on reducing the cost of 
                     sampling while maintaining the characteristics of a representative sample. 
                 </p>
             </div>
@@ -50,7 +50,7 @@
             <a href="./About.html">About</a>
             <a href="./team.html" >WRMS</a>
             <a href="./projects.html">Projects</a>
-            <a href="./resources.html" >Resources</a>
+            <a href="./themes.html" >Themes</a>
         </div>
 
         
