--- a/themes.html
+++ b/themes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Resources </title>
+        <title> Themes </title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -10,7 +10,7 @@
         </section>
 
         <div class="flex-row" style="font-size: 2vw; font-weight: bold;">
-            <a href="./about.html">About/a>
+            <a href="./about.html">About</a>
             <a href="./team.html" >The Team</a>
             <a href="./projects.html">Projects</a>
             <a href="./index.html" >WRMS</a>
